[gd_scene load_steps=2 format=3 uid="uid://b7uasrfv0rerb"]

[ext_resource type="Script" path="res://nodes/main.gd" id="1_hfa2i"]

[node name="main" type="Node2D"]
script = ExtResource("1_hfa2i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="PlayPongBtn" type="Button" parent="."]
offset_left = 305.0
offset_top = 185.0
offset_right = 455.0
offset_bottom = 251.0
text = "Play Pong"

[node name="PlayArkanoidBtn" type="Button" parent="."]
offset_left = 678.0
offset_top = 190.0
offset_right = 828.0
offset_bottom = 256.0
text = "Play Arkanoid"

[node name="QuitBtn" type="Button" parent="."]
offset_left = 507.0
offset_top = 409.0
offset_right = 657.0
offset_bottom = 475.0
text = "Quit"

[connection signal="pressed" from="PlayPongBtn" to="." method="_on_play_pong_btn_pressed"]
[connection signal="pressed" from="PlayArkanoidBtn" to="." method="_on_play_arkanoid_btn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_quit_btn_pressed"]
